# otmap

./: CMakeLists.txt  LICENSE.MPL2.md  README.md
apps/: barycenters.cpp  otmap.cpp  stippling.cpp
apps/common/: analytical_functions.cpp  analytical_functions.h  generic_tasks.cpp  generic_tasks.h  image_utils.cpp  image_utils.h  inputparser.cpp  inputparser.h  otsolver_options.h
otlib/: otsolver_2dgrid.cpp  otsolver_2dgrid.h  transport_map.cpp  transport_map.h
otlib/details/: line_search.cpp  line_search.h  nested_dissection.cpp  nested_dissection.h
otlib/surface_mesh/: IO.cpp  IO.h  IO_obj.cpp  IO_off.cpp  Surface_mesh.cpp  Surface_mesh.h  properties.h  types.h
otlib/utils/: BenchTimer.h  bvh2d.cpp  bvh2d.h  eigen_addons.h  mesh_utils.cpp  mesh_utils.h  rasterizer.cpp  rasterizer.h  stochastic_rasterizer.cpp  stochastic_rasterizer.h
